<resources>
    <string name="app_name">Resources</string>
    <string name="add_new_employee">Add new Employee</string>
    <string name="select_option_hint">Select Option</string>
    <string name="title">Title :</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name :</string>
    <string name="deo">Deo</string>
    <string name="work_email">Work Email</string>
    <string name="jonathan_gmail_com">jonathan@gmail.com</string>
</resources>